--- a/blog/2019-05-30-welcome.md
+++ b/blog/2019-05-30-welcome.md
@@ -1,13 +1,11 @@
 ---
 slug: welcome
 title: Welcome
-author: Yangshun Tay
-author_title: Front End Engineer @ Facebook
-author_url: https://github.com/yangshun
-author_image_url: https://avatars0.githubusercontent.com/u/1315101?s=400&v=4
-tags: [facebook, hello, docusaurus]
+author: Benno Dev
+author_title: Full Steck Developer
+author_url: https://github.com/bennodev19
+author_image_url: https://avatars3.githubusercontent.com/u/57860196?s=460&u=0648b65f7520a2bbc5a3052c06a37de046793af8&v=4
+tags: [hello, agile]
 ---
 
-Blog features are powered by the blog plugin. Simply add files to the `blog` directory. It supports tags as well!
-
-Delete the whole directory if you don't want the blog features. As simple as that!
+Hello there
