--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -15,7 +15,7 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
     <iframe
         src={`https://codesandbox.io/embed/${uri}?fontsize=14&hidenavigation=0&theme=dark&view=preview`}
         title={"Code Sandbox"}
-        style={{width: "100%", height: height || 500, borderRadius: 4, overflow: "hidden"}}
+        style={{width: "100%", height: height || 500, borderRadius: 4, borderColor: "#6c69a0", overflow: "hidden"}}
         allow={
             "geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
         }
@@ -25,11 +25,11 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
     />
 );
 
-# First State
+## 😎 First State
 
 <CodeSandBoxEmbed uri={"agilets-first-state-f12cz"}/>
 
 
-# Multieditor
+## 📝 Multieditor
 
 <CodeSandBoxEmbed uri={"multieditor-yxt4x"} height={800}/>
