fixed some typos

--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -29,6 +29,10 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
 
 <CodeSandBoxEmbed uri={"agilets-first-state-f12cz"}/>
 
+## 👨‍👩‍👦‍ First Collection
+
+<CodeSandBoxEmbed uri={"agilets-first-collection-uyi9g"} />
+
 
 ## 📝 Multieditor
 
