--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -26,14 +26,16 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
 );
 
 ## 😎 First State
-
 <CodeSandBoxEmbed uri={"agilets-first-state-f12cz"}/>
 
-## 👨‍👩‍👦‍ First Collection
 
+## 👨‍👩‍👦‍ First Collection
 <CodeSandBoxEmbed uri={"agilets-first-collection-uyi9g"} />
 
 
-## 📝 Multieditor
+## ⚙️‍ First Computed
+<CodeSandBoxEmbed uri={"agilets-first-computed-kisgr"} />
 
+
+## 📝 Multieditor
 <CodeSandBoxEmbed uri={"multieditor-yxt4x"} height={800}/>
