Added properties return type

--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -39,3 +39,8 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
 
 ## 📝 Multieditor
 <CodeSandBoxEmbed uri={"multieditor-yxt4x"} height={800}/>
+
+
+## 👴 First State [Class Component]
+<CodeSandBoxEmbed uri={"agilets-first-state-with-hoc-1qdew"}/>
+
