added simple todo list

--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -44,3 +44,6 @@ export const CodeSandBoxEmbed = ({ uri, height }) => (
 ## 👴 First State [Class Component]
 <CodeSandBoxEmbed uri={"agilets-first-state-with-hoc-1qdew"}/>
 
+## ✔️ Simple Todo List
+<CodeSandBoxEmbed uri={"agilets-simple-todo-list-glmc4"}/>
+
