--- a/docs/examples/react/All.mdx
+++ b/docs/examples/react/All.mdx
@@ -12,38 +12,46 @@ WIP Docs!
 :::
 
 export const CodeSandBoxEmbed = ({ uri, height }) => (
-    <iframe
-        src={`https://codesandbox.io/embed/${uri}?fontsize=14&hidenavigation=0&theme=dark&view=preview`}
-        title={"Code Sandbox"}
-        style={{width: "100%", height: height || 500, borderRadius: 4, borderColor: "#6c69a0", overflow: "hidden"}}
-        allow={
-            "geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
-        }
-        sandbox={
-            "allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
-        }
-    />
+  <iframe
+    src={`https://codesandbox.io/embed/${uri}?fontsize=14&hidenavigation=0&theme=dark&view=preview`}
+    title={'Code Sandbox'}
+    style={{
+      width: '100%',
+      height: height || 500,
+      borderWidth: 2,
+      borderRadius: 4,
+      borderColor: '#6c69a0',
+      overflow: 'hidden',
+    }}
+    allow={
+      'geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb'
+    }
+    sandbox={
+      'allow-modals allow-forms allow-popups allow-scripts allow-same-origin'
+    }
+  />
 );
 
 ## 😎 First State
-<CodeSandBoxEmbed uri={"agilets-first-state-f12cz"}/>
 
+<CodeSandBoxEmbed uri={'agilets-first-state-f12cz'} />
 
 ## 👨‍👩‍👦‍ First Collection
-<CodeSandBoxEmbed uri={"agilets-first-collection-uyi9g"} />
 
+<CodeSandBoxEmbed uri={'agilets-first-collection-uyi9g'} />
 
 ## ⚙️‍ First Computed
-<CodeSandBoxEmbed uri={"agilets-first-computed-kisgr"} />
 
+<CodeSandBoxEmbed uri={'agilets-first-computed-kisgr'} />
 
 ## 📝 Multieditor
-<CodeSandBoxEmbed uri={"multieditor-yxt4x"} height={800}/>
 
+<CodeSandBoxEmbed uri={'multieditor-yxt4x'} height={800} />
 
 ## 👴 First State [Class Component]
-<CodeSandBoxEmbed uri={"agilets-first-state-with-hoc-1qdew"}/>
+
+<CodeSandBoxEmbed uri={'agilets-first-state-with-hoc-1qdew'} />
 
 ## ✔️ Simple Todo List
-<CodeSandBoxEmbed uri={"agilets-simple-todo-list-glmc4"}/>
 
+<CodeSandBoxEmbed uri={'agilets-simple-todo-list-glmc4'} />
