--- a/docs/examples/vue/examples/FirstCollection.mdx
+++ b/docs/examples/vue/examples/FirstCollection.mdx
@@ -7,4 +7,4 @@ slug: /examples/vue/first-collection
 
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
-<CodeSandBoxEmbed uri={'todo'} />
+<CodeSandBoxEmbed uri={'agilets-first-state-i5xxs'} />
