--- a/docs/examples/react/examples/FirstCollection.mdx
+++ b/docs/examples/react/examples/FirstCollection.mdx
@@ -8,3 +8,5 @@ slug: /examples/react/first-collection
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'agilets-first-collection-uyi9g'} />
+
+[Back](../react)
