--- a/docs/examples/react/examples/FirstState.mdx
+++ b/docs/examples/react/examples/FirstState.mdx
@@ -8,3 +8,5 @@ slug: /examples/react/first-state
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'agilets-first-state-f12cz'} />
+
+[Back](../react)
