--- a/docs/examples/react/examples/FrequentUpdates.mdx
+++ b/docs/examples/react/examples/FrequentUpdates.mdx
@@ -9,4 +9,6 @@ import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed
 
 <CodeSandBoxEmbed uri={'agilets-frequent-updates-5tprm'} />
 
+[Back](../react)
+
 
