--- a/docs/examples/react/examples/LargeState.mdx
+++ b/docs/examples/react/examples/LargeState.mdx
@@ -8,3 +8,5 @@ slug: /examples/react/large-state
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'agilets-large-state-1kr4z'} />
+
+[Back](../react)
