--- a/docs/examples/react/examples/Multieditor.mdx
+++ b/docs/examples/react/examples/Multieditor.mdx
@@ -8,3 +8,5 @@ slug: /examples/react/multieditor
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'multieditor-yxt4x'} height={800} />
+
+[Back](../react)
