--- a/docs/examples/react/examples/SimpleTodoList.mdx
+++ b/docs/examples/react/examples/SimpleTodoList.mdx
@@ -8,3 +8,5 @@ slug: /examples/react/simple-todo-list
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'agilets-simple-todo-list-glmc4'} />
+
+[Back](../react)
