--- a/docs/examples/react/examples/SimpleUseProxy.mdx
+++ b/docs/examples/react/examples/SimpleUseProxy.mdx
@@ -9,3 +9,4 @@ import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed
 
 <CodeSandBoxEmbed uri={'agilets-useproxy-jw5x0'} />
 
+[Back](../react)
