--- a/docs/examples/vue/examples/FirstCollection.mdx
+++ b/docs/examples/vue/examples/FirstCollection.mdx
@@ -8,3 +8,5 @@ slug: /examples/vue/first-collection
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
 <CodeSandBoxEmbed uri={'agilets-first-state-i5xxs'} />
+
+[Back](../vue)
