--- a/docs/examples/react/examples/FirstStateClass.mdx
+++ b/docs/examples/react/examples/FirstStateClass.mdx
@@ -9,4 +9,4 @@ import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed
 
 <CodeSandBoxEmbed uri={'agilets-first-state-with-hoc-1qdew'} />
 
-[Back](../react)
+[Back](../../react)
