--- a/docs/examples/react/examples/QueryStopwatch.mdx
+++ b/docs/examples/react/examples/QueryStopwatch.mdx
@@ -9,4 +9,4 @@ import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed
 
 <CodeSandBoxEmbed uri={'agile-query-stopwatch-hejqv'} />
 
-[Back](../Introduction)
+[Back](../react)
