--- a/docs/examples/react/examples/Boxes.mdx
+++ b/docs/examples/react/examples/Boxes.mdx
@@ -7,6 +7,6 @@ slug: /examples/react/Boxes
 
 import {CodeSandBoxEmbed} from "../../../../src/components/docs/CodeSandBoxEmbed";
 
-<CodeSandBoxEmbed uri={'agile-boxes-edux4'} />
+<CodeSandBoxEmbed uri={'agile-boxes-0mfz1o'} />
 
 [Back](../react)
